# similarity_of_texts

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
app/methods/: doc_2_vec.py  word_2_vec.py
app/models/: word2vec.model
app/tools/: doc_reader.py  docx_tools.py  plot.py  simmilatity_docs.py  text_preprocessing.py
app/tools/data/: custom_stop_words.txt  my_stop_words.txt
